# k8s-crd-operator-rs

./: Cargo.toml  README.md  crd.yaml  device_iphone.yaml  device_think.yaml
src/: main.rs
